force-app/main/default/objects/Supply_Request__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Supply Requests</relationshipLabel>
    <relationshipName>Supply_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>