force-app/main/default/objects/Supply_Request__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Supply Requests</relationshipLabel>
    <relationshipName>Supply_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>