force-app/main/default/objects/Supply_Request__c/fields/Order_Allocation_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Allocation_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Allocation Line Item</label>
    <referenceTo>Order_Allocation_Line_Item__c</referenceTo>
    <relationshipLabel>Supply Requests</relationshipLabel>
    <relationshipName>Supply_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>