force-app/main/default/objects/Supply_Request__c/fields/Purchase_Requisition_Line__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Requisition_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Requisition Line</label>
    <referenceTo>Purchase_Requisition_Line__c</referenceTo>
    <relationshipLabel>Supply Requests</relationshipLabel>
    <relationshipName>Supply_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>