force-app/main/default/objects/Supply_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Demand</fullName>
            </value>
            <value>
                <fullName>Forecast Demand</fullName>
            </value>
            <value>
                <fullName>Manual Request</fullName>
            </value>
            <value>
                <fullName>Stock Replenishment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>