force-app/main/default/objects/Supply_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
                <default>true</default>
                <label>Purchase</label>
            </value>
            <value>
                <fullName>Manufacture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>