force-app/main/default/objects/Supply_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Inventory_Location__c</columns>
    <columns>Item__c</columns>
    <columns>Requested_Qty__c</columns>
    <columns>Received_Qty__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>